--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Nush100.github.io/My-Website",
+  "homepage": "https://nush100.github.io/My-Website",
   "dependencies": {
     "@emailjs/browser": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.5",
